--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/RazielTX/tokyoMetro#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.4",
     "concurrently": "^8.2.0",
     "dotenv": "^16.3.1",
